[package]
name = "ignore-gen"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Ethan Wang <avaniawang@outlook.com>"]

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
colored = "3.0.0"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "tracing"] }

[package.metadata.deb]
depends = "libssl3, linux-vdso1, libcrypto3, libgcc_s, libm6, libc6"
